monitoring/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    cert-manager.io/issuer: letsencrypt-grafana
spec:
  ingressClassName: nginx
  rules:
    - host: grafana.scaletificdevops.com
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: prometheus-grafana 
                port:
                  number: 80
            path: /
  # This section is only required if TLS is to be enabled for the Ingress
  tls:
    - hosts:
      - grafana.scaletificdevops.com
      secretName: letsencrypt-grafana

---

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: prometheus-ingress
#   namespace: monitoring
# spec:
#   ingressClassName: nginx
#   rules:
#     - host: prometheus.scaletificdevops.com
#       http:
#         paths:
#           - pathType: Prefix
#             backend:
#               service:
#                 name: prometheus-kube-prometheus-prometheus
#                 port:
#                   number: 9090
#             path: /
#   # This section is only required if TLS is to be enabled for the Ingress
#   # tls:
#   #   - hosts:
#   #     - www.example.com
#   #     secretName: example-tls
